export interface Category {
    id: string
    designation: string
}