import { Category } from './category';

export interface Item {
  image: string;
  condition: string;
  category: Category;
}
