package org.upskill.springboot.Controllers;

public class AdvertisementController {
}
