package org.upskill.springboot.Mappers;

public class AdvertisementMapper {
}
