package org.upskill.springboot.Repositories;

public interface AdvertisementRepository {
}
