package org.upskill.springboot.Services;

public class AdvertisementService {
}
